--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="message">
         <!-- 1 Grettings My Name is Kyle Langford -->
         <h2>Kyle Langford</h2>
-        <p>Greetings! Everhood is my portfolio site. It's like the personification of my creative identity or I... just liked the name. I <span class="icon icon-heart2"></span> the Web. I studied graphic design in school and became a self-taught web UI/UX expert overnight and about 6 years. I specialize in front-end development but I am a Soup to Nuts guy, working on all phases of a web project. Anything I can't do, I find someone smarter then me to do it. <em>Pro-tip:</em> Find smart people, kidnap them!</p>
+        <p>Greetings! Everhood is my portfolio site. It's like the personification of my creative identity or I... just liked the name. I <span class="icon icon-heart2"></span> the Web. I studied graphic design and animation in school and for the last 6 years been teaching myself the ways of the WWW. I specialize in front-end development but I am a Soup to Nuts guy, working on all phases of a web project. Anything I can't do, I find someone smarter then me to do it. <em>Pro-tip:</em> Find smart people, kidnap them!</p>
         <span class="end icon-bike"></span>
       </div>
     </div>
