--- a/pages/site-audit.html
+++ b/pages/site-audit.html
@@ -11,29 +11,29 @@
   <meta name="author" rel="me" content="Kyle Langford">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="../img/brand/favicon.png">
+  <link rel="icon" type="image/png" href="../assets/img/brand/favicon.png">
   
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../assets/css/styles.css">
 
   <!-- Modernizr - Load after CSS -->
-  <script src="../js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+  <script src="../assets/js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
 </head>
 <body class="page page--front">
 
   <header class="container size-to-window intro">
-    <div class="row row--flex row-align--center row--justify fill-height">
+    <div class="row flex flex-align--center flex--justify fill-height">
 
       <nav class="position-top-left">
         <a href="/" class="button--previous"><span class="icons-skip-back"></span>Back</a>
       </nav>
 
       <div class="column half text--center">
-        <img src="../img/svg-2/zoom.svg" class="title-image" alt="Magnifying Glass">
+        <img src="../assets/img/svg-2/zoom.svg" class="title-image" alt="Magnifying Glass">
         <h1 class="page__title">UX Audit</h1>
         <p class="description">A curated list of links that helped me a long the way.</p>
       </div>
@@ -42,8 +42,8 @@
   </header>
 
   <section class="container">
-    <div class="row row--flex row--justify pad-default">
-      <div class="column half">
+    <div class="row flex flex--justify pad-default">
+      <div class="column two-thirds">
 
         <h3>1. Define Goals</h3>
 
