restructuring for web deployment

--- a/pages/case-study--elev8d.html
+++ b/pages/case-study--elev8d.html
@@ -48,58 +48,35 @@
 
           <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
 
-          <figure>
-            <img src="../assets/img/case-studies/way-back.png"
-                 alt="Elephant at sunset">
-            <figcaption>Princeton Alumni Website, prior to redesign.</figcaption>
-          </figure>
+          <video controls width="250">
 
-          <p>The website was dense and packed with content. We wanted to add more of the magazines editorial look and feel to the online experience. While modernizing the look and building the site top down as a mobile first site.</p>
+              <source src="/media/examples/flower.webm"
+                      type="video/webm">
 
-          <figure>
-            <img src="../assets/img/case-studies/mag-cover.jpg"
-                 alt="Elephant at sunset">
-            <figcaption>Magazine</figcaption>
-          </figure>
+              <source src="/media/examples/flower.mp4"
+                      type="video/mp4">
 
-          <p>After performing the content inventory we worked on prioritizing this content in a mobile context. We redesigned the site map and navigation to make the site very simple to navigate.</p>
+              Sorry, your browser doesn't support embedded videos.
+          </video>
 
           <figure>
-            <img src="../assets/img/case-studies/test-3.jpg" class="paper" 
-                 alt="Elephant at sunset">
-            <figcaption>Sitemap.</figcaption>
-          </figure>
-
-          <figure>
-            <img src="../assets/img/case-studies/test-4.jpg"
-                 alt="Elephant at sunset">
-            <figcaption>Mobile Priority</figcaption>
-          </figure>
-
-          <figure>
-            <img src="../assets/img/case-studies/test-5.jpg"
+            <img src="../assets/img/case-studies/test-2.jpg"
                  alt="Elephant at sunset">
             <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
           </figure>
 
           <figure>
-            <img src="../assets/img/case-studies/test-6.jpg"
+            <img src="../assets/img/case-studies/test.png"
+                 alt="Elephant at sunset">
+            <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
+          </figure>
+
+          <figure>
+            <img src="https://via.placeholder.com/600"
                  alt="Elephant at sunset">
             <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
           </figure>
           
-          <figure>
-            <img src="../assets/img/case-studies/style-tile-1.png"
-                 alt="Elephant at sunset">
-            <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
-          </figure>
-
-          <figure>
-            <img src="../assets/img/case-studies/style-tile-2.png"
-                 alt="Elephant at sunset">
-            <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
-          </figure>
-
         </article>
       </div>
     </div>
