--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
     </header>
     <!-- 2.1 - Specialties -->
-    <div class="row flex pad-double">
+    <div class="row flex pad-default">
       <div class="column one-fourth animate fade-in">
         <p class="list-title">Specialties</p>
         <ul class="pretty">
@@ -106,7 +106,7 @@
 
     <!-- <div class="special"> -->
 
-    <div class="row flex  pad-double">
+    <div class="row flex  pad-default">
       <div class="column one-fourth animate fade-in">
         <!-- 3.1 - Capabilities  -->
         <p class="list-title">Capabilities</p>
@@ -131,11 +131,11 @@
         </div>
       </div> -->
 
-      <div class="column one-fourth animate fade-in">
+      <!--  <div class="column one-fourth animate fade-in">
         <div class="card lgbg-2">
            <h2><a href="/pages/site-audit.html">Request a<br>Site Audit.</a></h2>
         </div>
-      </div>
+      </div> -->
 
     </div>
   <!-- </div> -->
@@ -150,7 +150,7 @@
       </div>
     </header>
 
-    <div class="row flex  pad-double">
+    <div class="row flex  pad-default">
       <!-- 4.1 - Technology -->
       <div class="column one-fourth animate fade-in">
         <p class="list-title">Foundation</p>
@@ -254,7 +254,7 @@
 
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script> <!-- CDN -->
-  <script>window.jQuery || document.write('<script src="js/jquery-2.1.0.min.js"><\/script>')</script> <!-- Fallback -->
+  <script>window.jQuery || document.write('<script src="assets/js/jquery-2.1.0.min.js"><\/script>')</script> <!-- Fallback -->
   <script src="assets/js/main.js"></script>
 
   </body>
