--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   </header>
 
   <section class="container size-to-window event--close-hint">
-    <div class="row flex flex-align--center flex--justify fill-height pad-default">
-      <div class="column half animate fade-in">
+    <div class="row flex flex-align--center fill-height pad-default">
+      <div class="column two-thirds animate fade-in">
 
         <!-- 1.1 - ntro Description  -->
         <h2 class="section__title">Welcome!</h2>
@@ -60,7 +60,7 @@
     <!-- 2.1 - Specialties -->
     <div class="row flex pad-default">
       <div class="column one-fourth animate fade-in">
-        <p class="list-title">Specialties</p>
+        <p class="list-title">Capabilities</p>
         <ul class="pretty">
           <li>App Design</li>
           <li>CMS Theming</li>
@@ -75,20 +75,18 @@
         <ul class="pretty">
           <li>Adobe Photoshop</li>
           <li>Adobe Illustrator</li>
-          <li>Balsamiq</li>
           <li><span class="icon-list gold-star icons-star"></span>Browser</li>
-          <li>Invision</li>
           <li>Pen &amp; Paper</li>
           <li>Sketch</li>
         </ul>  
       </div>
       
       <div class="column one-fourth animate fade-in">
-        <div class="card lgbg-1">
+        <div class="card">
           <p class="list-title">Design Examples</p>
           <ul class="pretty">
             <li><span class="icons-corner-down-right"></span><a href="pages/case-study--paw.html">Princeton Alumni Mag.</a></li>
-            <li><span class="icons-corner-down-right"></span><a href="">Elev8d Fitness Video Player</a></li>
+            <li><span class="icons-corner-down-right"></span><a href="pages/case-study--elev8d.html">Elev8d Fitness Video Player</a></li>
           </ul>
         </div>
       </div>
@@ -121,15 +119,16 @@
         </ul>
       </div>
 
-      <!-- <div class="column one-fourth animate fade-in">
-        <div class="card lgbg-1">
-          <p class="list-title">Case Studies</p>
-          <ul class="pretty">
-            <li><span class="icons-corner-down-right"></span><a href="">Theming a SaaS Multisite</a></li>
-            <li><span class="icons-corner-down-right"></span><a href="">Writing a CSS Framework</a></li>
-          </ul>
-        </div>
-      </div> -->
+      <!-- 2.2 - UX Tools -->
+      <div class="column one-fourth animate fade-in">
+        <p class="list-title">UX Tools</p>
+        <ul class="pretty">
+          <li>Balsamiq</li>
+          <li>Invision</li>
+          <li>Google Analytics</li>
+          <li>Pen &amp; Paper</li>
+        </ul>  
+      </div>
 
       <!--  <div class="column one-fourth animate fade-in">
         <div class="card lgbg-2">
@@ -151,18 +150,7 @@
     </header>
 
     <div class="row flex  pad-default">
-      <!-- 4.1 - Technology -->
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">Foundation</p>
-        <ul class="pretty">
-          <li><span class="icon-list gold-star icons-star"></span>HTML / CSS</li>
-          <li>Javascript ES5 / jQuery</li>
-          <li>SaSS / ScSS</li>
-          <li>PHP / MySQL</li>
-          <li>Local Development</li>
-          <li>Version Control (Git)</li>
-        </ul>
-      </div>
+
       <!-- 4.2 - Other -->
       <div class="column one-fourth animate fade-in">
         <p class="list-title">Capabilities</p>
@@ -175,25 +163,31 @@
           <li><span class="icon-list gold-star icons-star"></span>Website Development</li>
         </ul>
       </div>
+
+      <!-- 4.1 - Technology -->
+      <div class="column one-fourth animate fade-in">
+        <p class="list-title">Foundation</p>
+        <ul class="pretty">
+          <li><span class="icon-list gold-star icons-star"></span>HTML / CSS</li>
+          <li>Javascript ES5 / jQuery</li>
+          <li>SaSS / ScSS</li>
+          <li>Gulp.js</li>
+          <li>PHP / MySQL</li>
+          <li>Local Development</li>
+          <li>Version Control (Git)</li>
+        </ul>
+      </div>
+
       <!-- 4.1 - Content Manament Systems -->
       <div class="column one-fourth animate fade-in">
         <p class="list-title">Technologies</p>
         <ul class="pretty">
           <li>Angular</li>
           <li><span class="icon-list gold-star icons-star"></span>Drupal CMS</li>
-          <li>Twig / Handlebars.js</li>
+          <!-- <li>Twig / Handlebars.js</li> -->
           <li>Node / Express</li>
-          <li>Gulp.js</li>
           <li>Shopify</li>
-        </ul>
-      </div>
-      <!-- 4.1 - Content Manament Systems -->
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">Intergrations</p>
-        <ul class="pretty">
-          <li>Contentful</li>
           <li>Google Analytics</li>
-          <li>Survey Monkey</li>
           <li>Stripe</li>
           <li>Mailchimp</li>
         </ul>
@@ -236,6 +230,8 @@
           <ul class="pretty">
           <li class="list__item">
             <a href="/pages/bookmarks.html"><span class="icon-list icons-bookmark"></span>My Bookmarks</a></li>
+          <li class="list__item">
+            <a href="/assets/pdf/klangford_resume2018.pdf"><span class="icon-list icons-bookmark"></span>Request Resume</a></li>
           </ul>
       </div>
     </div>
