--- a/pages/bookmarks.html
+++ b/pages/bookmarks.html
@@ -42,7 +42,7 @@
 
   <section class="container">
     <div class="row flex flex--justify pad-default">
-      <div class="column half">
+      <div class="column two-thirds">
 
         <p class="list-title">Design</p>
         <ul class="bookmarks">
