--- a/pages/case-study--paw.html
+++ b/pages/case-study--paw.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Bookmarks | Kyle Langford</title>
+  <title>PAW | Kyle Langford</title>
 
   <meta name="description" content="My name is Kyle Langford, and this is my web design and development portfolio.">
   <meta name="author" rel="me" content="Kyle Langford">
@@ -34,7 +34,7 @@
 
       <div class="column half text--center">
         <h1 class="page__title">PAW</h1>
-        <p class="description">Wireframes and Content Strategy</p>
+        <p class="description">Site Redesign</p>
       </div>
 
     </div>
@@ -46,59 +46,112 @@
         <article class="content">
           <h4>Pellentesque Vehicula Ultricies</h4>
 
-          <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+          <p>After successful redesigns of bycycling.com and guidepost.org I was excited for our next project but realized that our process at this point was unsustainable.</p>
 
-          <figure>
-            <img src="../assets/img/case-studies/way-back.png"
+          <p>Around 2012 the web world changed with real support for css media queries. This sent a ripple through the industry that would change how we work moving forward. We had been making incremental improvements to our process over this time. We started to intergrate RWD ideas around a similar time but it took until 2014 for our processes to really embrace this change. Many companies struggled to adjust and many were looking for guidance. As the rest of us waited for the technologicaal floor to meet our feet. A result of producing phone, tablet, desktop comps for all pages through multiple versions was part of the growing pains. This reached an apex with guideposts when at one time we had ~90 working wireframe documents.</p>
+
+          <p>I knew moving forward that code was our answer. My proposal was to only produce 5 wireframe pages at phone/tablet/desktop. The rest of the site would be designed using a component library derived from those 5 pages. Ultimately a full working version of their site would be produced in code at a wireframe fidelity. The client would see full working version before we even technically entered the design phase (The overall process was still waterfall). This would be a huge departure from what we had done in the past. Luckily the group at PAW was supportive and interested in new ways of working.</p>
+
+          <p>My accomplishments for this project include crafting a viable process from content > design > development that I was apart of for the entirety of the project. Designing reusable components and list styles that would be used to complete any number of pages. All of this was done from a mobile first perspective in design and in code. I was ultimately responsible for creating the sitemap, mobile priority, wireframes, and working prototype. I also produced all the frontend production code, much of which was recycled from the prototype. I still hold to this day this is the best redesign Brunello haas done.</p>
+
+          <a href="https://paw.princeton.edu">Live Site</a>
+
+          <ul>
+            <li>Nicole Baltzer: PM</li>
+            <li>Jason Fournier: Designer</li>
+            <li>Kyle Langford: Designer, Front-End Developer</li>
+            <li>Mike Calebrese: Drupal Developer</li>
+          </ul>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/paw/way-back.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Princeton Alumni Website, prior to redesign.</div>
+          </div>
+
+          <p>The website was dense and packed with content. We wanted to add more of the magazines editorial look and feel to the online experience. While making the site responsive and mobile first site.</p>
+
+          <div class="specimen text--center">
+            <img src="../assets/img/projects/paw/mag-cover.png"
+                 alt="Elephant at sunset" style="max-width: 50%;">
+            <div class="caption">Issue #.</div>
+          </div>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/paw/style-tile-1.png"
                  alt="Elephant at sunset">
-            <figcaption>Princeton Alumni Website, prior to redesign.</figcaption>
-          </figure>
+            <div class="caption">Competitor Style Collage #1.</div>
+          </div>
 
-          <p>The website was dense and packed with content. We wanted to add more of the magazines editorial look and feel to the online experience. While modernizing the look and building the site top down as a mobile first site.</p>
-
-          <figure>
-            <img src="../assets/img/case-studies/mag-cover.jpg"
+          <div class="specimen">
+            <img src="../assets/img/projects/paw/style-tile-2.png"
                  alt="Elephant at sunset">
-            <figcaption>Magazine</figcaption>
-          </figure>
+            <div class="caption">Competitor Style Collage #2.</div>
+          </div>
 
-          <p>After performing the content inventory we worked on prioritizing this content in a mobile context. We redesigned the site map and navigation to make the site very simple to navigate.</p>
+          <p>We started by doing a content invetory of the previous site. This was converted into a mobile priority document and sitemap. </p>
 
-          <figure>
-            <img src="../assets/img/case-studies/test-3.jpg" class="paper" 
+          <div class="specimen">
+            <img src="../assets/img/projects/paw/sitemap_v1.jpg"
                  alt="Elephant at sunset">
-            <figcaption>Sitemap.</figcaption>
-          </figure>
+            <div class="caption">Near Final Sitemap.</div>
+          </div>
 
-          <figure>
-            <img src="../assets/img/case-studies/test-4.jpg"
+          <p>Dynamic Grids</p>
+          <div class="specimen">
+            <img src="../assets/img/projects/paw/list-blocks-3.jpg"
                  alt="Elephant at sunset">
-            <figcaption>Mobile Priority</figcaption>
-          </figure>
+            <img src="../assets/img/projects/paw/list-blocks-4.jpg"
+                 alt="Elephant at sunset">
+            <img src="../assets/img/projects/paw/list-blocks-5.jpg"
+                 alt="Elephant at sunset">
+            <img src="../assets/img/projects/paw/list-blocks-6.jpg"
+                 alt="Elephant at sunset">
+            <div class="caption">We wanted to keep the homepage fresh.</div>
+          </div>
 
-          <figure>
-            <img src="../assets/img/case-studies/test-5.jpg"
+          <div class="specimen">
+            <img src="../assets/img/projects/paw/list-block-sidebar-mobile.png"
                  alt="Elephant at sunset">
-            <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
-          </figure>
+            <img src="../assets/img/projects/paw/list-block-sidebar.png"
+                 alt="Elephant at sunset">
+            <div class="caption">Sidebar Component, showing mobile vs Desktop.</div>
+          </div>
 
-          <figure>
-            <img src="../assets/img/case-studies/test-6.jpg"
+          <p>Wireframe Sample</p>
+          <div class="specimen">
+            <img src="../assets/img/projects/paw/wireframe-rwd-article-page-phone.jpg"
                  alt="Elephant at sunset">
-            <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
-          </figure>
-          
-          <figure>
-            <img src="../assets/img/case-studies/style-tile-1.png"
+            <img src="../assets/img/projects/paw/wireframe-rwd-article-page-tablet.jpg"
                  alt="Elephant at sunset">
-            <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
-          </figure>
+            <img src="../assets/img/projects/paw/wireframe-rwd-article-page.jpg"
+                 alt="Elephant at sunset">                 
+            <div class="caption">Full fidelity Wireframe, one of the few we produced.</div>
+          </div>
 
-          <figure>
-            <img src="../assets/img/case-studies/style-tile-2.png"
+          <p>Deliverable</p>
+          <div class="stack">
+            <img src="../assets/img/projects/paw/test-3.jpg"
                  alt="Elephant at sunset">
-            <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
-          </figure>
+            <img src="../assets/img/projects/paw/test-4.jpg"
+                 alt="Elephant at sunset">
+            <img src="../assets/img/projects/paw/test-5.jpg"
+                 alt="Elephant at sunset">
+            <img src="../assets/img/projects/paw/test-6.jpg"
+                 alt="Elephant at sunset">
+          </div>
+
+          <p>Prototyping also allowed us to iterate more on our FE code.</p>
+
+          <a href="prototype">Prototype</a>
+
+          <p>Design</p>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/paw/style-tile-1.png"
+                 alt="Elephant at sunset">
+            <div class="caption">Final Comp produced by Jay Fournier.</div>
+          </div>
 
         </article>
       </div>
