--- a/pages/case-study--brm.html
+++ b/pages/case-study--brm.html
@@ -46,20 +46,42 @@
         <article class="content">
           <h4>Pellentesque Vehicula Ultricies</h4>
 
+          <p>One of my first full design projects at Brunello. This design for Bally Ribbon Mills has held up well over the years, even longer then the site itself! Style tiles were all the rage at the time so this project went from wireframes to style tiles to full page mockups. I also built the full FE and BE of this site in Drupal 7.</p>
+
+          <!-- Logo -->
+
           <div class="specimen">
             <img src="../assets/img/projects/brm/brm_tile-1.jpg"
                  alt="Elephant at sunset" class="paper">
-            <div class="caption">Bally Ribbon Mills</div>
+            <div class="caption">Homepage Wireframe</div>
+          </div>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/brm/brm_tile-2.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Style Direction #1</div>
+          </div>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/brm/brm_tile-1.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Style Direction #2</div>
           </div>
 
           <div class="specimen">
             <img src="../assets/img/projects/brm/design-homepage_v3c.jpg"
                  alt="Elephant at sunset" class="paper">
-            <div class="caption">Bally Ribbon Mills</div>
+            <div class="caption">Final Homepage Design</div>
           </div>
 
-          <!-- Wireframe -->
-          <!-- Logo -->
+          <div class="specimen">
+            <img src="../assets/img/projects/brm/design-homepage_v3c.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Final Article Design</div>
+          </div>
+
+          <p>work done at brunello</p>
+          <p>Last edited</p>
 
         </article>
       </div>
