--- a/pages/case-study--cpl.html
+++ b/pages/case-study--cpl.html
@@ -34,7 +34,7 @@
 
       <div class="column half text--center">
         <h1 class="page__title">Cambridge Public Library</h1>
-        <p class="description">Wayfinding</p>
+        <p class="description">Wayfinding and Signage</p>
       </div>
 
     </div>
@@ -47,7 +47,37 @@
           <h4>Pellentesque Vehicula Ultricies</h4>
 
           <div class="specimen">
+            <img src="../assets/img/projects/cpl/156.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Cambridge Public Library</div>
+          </div>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/cpl/171.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Cambridge Public Library</div>
+          </div>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/cpl/180.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Cambridge Public Library</div>
+          </div>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/cpl/182.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Cambridge Public Library</div>
+          </div>
+
+          <div class="specimen">
             <img src="../assets/img/projects/cpl/190.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Cambridge Public Library</div>
+          </div>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/cpl/209.jpg"
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Cambridge Public Library</div>
           </div>
@@ -57,6 +87,9 @@
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Cambridge Public Library</div>
           </div>
+
+          <p>work done at wojchehowski</p>
+          <p>Last edited</p>
 
         </article>
       </div>
