--- a/pages/case-study--paw.html
+++ b/pages/case-study--paw.html
@@ -153,6 +153,9 @@
             <div class="caption">Final Comp produced by Jay Fournier.</div>
           </div>
 
+          <p>work done at brunello</p>
+          <p>Last Edit</p>
+
         </article>
       </div>
     </div>
