adding paw wires

--- a/demo/paw.wires/inc/header.html
+++ b/demo/paw.wires/inc/header.html
@@ -7,7 +7,7 @@
 
   <div class="logo">
     <div class="vertical-center">
-      <a href="/"><img src="img/logo.gif"></a>
+      <a href="/demo/paw.wires/index.html"><img src="img/logo.gif"></a>
     </div>
   </div>
 
