adding paw wires

--- a/portfolio/paw.html
+++ b/portfolio/paw.html
@@ -152,7 +152,7 @@
             <div class="caption">Final Comp produced by Jay Fournier.</div>
           </div>
 
-          <p>Prototyping also allowed us to iterate more on our FE code.</p>
+          <p>Prototyping also allowed us to iterate more on our FE code. 41 pages, ~30 components with 111 variations in content. So not only did we mkae this more managable but ultimately we were able to show more pages then we did with guideposts, in less time. Win. 2000 lines of CSS.</p>
 
           <a href="/demo/paw.wires/index.html" class="button">Prototype</a>
 
@@ -171,6 +171,7 @@
           </div>
 
           <a href="https://paw.princeton.edu">Live Site</a>
+
 
 
           <code><pre>
