adding paw wires

--- a/portfolio/paw.html
+++ b/portfolio/paw.html
@@ -170,9 +170,7 @@
             <div class="caption">Dynamic Grid.</div>
           </div>
 
-          <a href="https://paw.princeton.edu">Live Site</a>
-
-
+          <a href="https://paw.princeton.edu" class="button">Live Site</a>
 
           <code><pre>
             <body class="front">
